fix: fix scrollbar width

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   align-items: center; 
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
 }
 
 ::-webkit-scrollbar-thumb {
